fix flex on small screens

--- a/shortener/urls/static/css/main.css
+++ b/shortener/urls/static/css/main.css
@@ -38,6 +38,9 @@ main {
 }
 
 @media only screen and (max-width: 768px) {
+    body {
+        flex-direction: column;
+    }
     main {
         width: 100%;
     }
@@ -127,8 +130,7 @@ button {
 }
 
 ::-webkit-scrollbar-track {
-    background: none;
-    /* border-radius: 10px; */
+    background: rgba(0, 0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb {
